# Esper-Thesis

./: ESPER-THESIS-QUICK-START.md  ESPER-THESIS-SWARM-SYNTHESIS.md  MANIFEST.in  PROJECT_SUMMARY.md  README.md  SWARM-SYNTHESIS.md  pyproject.toml
.github/workflows/: main.yml  publish.yml
docs/: API.md  ARCHITECTURE.md  CLI_REFERENCE.md  DATA_MODEL.md  QUICK_START.md  STATUS.md  SWARM-VISION.md  TESTING.md
esper-thesis/: __init__.py  config.py
esper-thesis/standalone/: esper-thesis.py
src/esper_thesis/: __launcher__.py  agents.py  cli.py  export.py  model.py  router.py  storage.py
